--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,8 @@
     <string name="category_police_title">Police</string>
     <string name="category_police_string">police</string>
     <string name="category_police_in_description_string">police force</string>
+    <string name="category_political_organization_title">Political Organization</string>
+    <string name="category_political_organization_string">political organization</string>
     <string name="category_university_title">University</string>
     <string name="category_university_string">university</string>
     <string name="category_charity_title">Charity</string>
@@ -178,6 +180,8 @@
     <string name="category_vexillology_description_string">vexillological</string>
     <string name="category_maritime_title">Maritime</string>
     <string name="category_maritime_string">maritime</string>
+    <string name="category_terrorist_organization_title">Terrorist Organization</string>
+    <string name="category_terrorist_organization_string">designated terrorist organization</string>
     <string name="category_unitary_title">Unitary</string>
     <string name="category_unitary_string">unitary</string>
     <string name="category_federal_title">Federal</string>
@@ -246,10 +250,8 @@
     <string name="category_social_title">Social</string>
     <string name="category_social_string">social</string>
     <string name="category_social_in_description">social movement</string>
-    <string name="category_political_title">Political</string>
-    <string name="category_political_string">political</string>
-    <string name="category_political_long_title">Political Movement</string>
-    <string name="category_political_long_string">political movement</string>
+    <string name="category_political_movement_title">Political Movement</string>
+    <string name="category_political_movement_string">political movement</string>
     <string name="category_historical_title">Historical</string>
     <string name="category_historical_string">historical</string>
     <string name="category_historical_in_description">defunct</string>
