--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,7 +318,8 @@
     <string name="game_over_exit_button">Exit</string>
     <string name="game_over_replay_button">Replay</string>
     <string name="game_over_share_subject">Game score</string>
-    <string name="game_over_share_text">Flags game: https://github.com/aftly/Flags\nMy score: %s/%s\nCategory: %s\nAnswer mode: %s\nDifficulty mode: %s</string>
+    <string name="game_over_share_country">Country:\ </string>
+    <string name="game_over_share_text">Flags game: https://github.com/aftly/Flags\nMy score: %s/%s\nCategory: %s\n%s%sAnswer mode: %s\nDifficulty mode: %s</string>
     <string name="game_paused">Game paused</string>
     <string name="game_unpause">Unpause game</string>
     <string name="game_score_details_title">Score details</string>
