continue refactor of category strings logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,9 +72,6 @@
     <string name="category_devolved_government_title">Devolved Government</string>
     <string name="category_devolved_government_string">devolved government</string>
     <string name="category_devolved_government_in_description">with a devolved government</string>
-    <string name="category_devolved_government_in_description_theocratic">with a devolved theocratic government</string>
-    <string name="category_devolved_government_in_description_socialist">with a devolved socialist government</string>
-    <string name="category_devolved_government_in_description_fascist">with a devolved fascist government</string>
     <string name="category_indigenous_territory_title">Indigenous Territory</string>
     <string name="category_indigenous_territory_string">indigenous territory</string>
     <string name="category_unrecognized_state_title">Unrecognized State</string>
@@ -160,15 +157,13 @@
     <string name="category_assembly_title">Assembly</string>
     <string name="category_assembly_string">assembly</string>
     <string name="category_department_title">Department</string>
-    <string name="category_department_string">department</string>
-    <string name="category_department_in_description">government department</string>
+    <string name="category_department_string">government department</string>
     <string name="category_military_title">Military</string>
     <string name="category_military_string">military</string>
     <string name="category_military_child_string">military division</string>
     <string name="category_military_alliance_string">military alliance</string>
     <string name="category_police_title">Police</string>
-    <string name="category_police_string">police</string>
-    <string name="category_police_in_description_string">police force</string>
+    <string name="category_police_string">police force</string>
     <string name="category_political_organization_title">Political Organization</string>
     <string name="category_political_organization_string">political organization</string>
     <string name="category_political_military_organization_string">political and military organization</string>
@@ -180,10 +175,9 @@
     <string name="category_religious_string">religious</string>
     <string name="category_religious_in_description">religious institution</string>
     <string name="category_vexillology_title">Vexillology</string>
-    <string name="category_vexillology_string">vexillology</string>
+    <string name="category_vexillology_string">vexillological</string>
     <string name="category_vexillology_category_button_title">Vexillological Institution</string>
     <string name="category_vexillology_description_title">Vexillological</string>
-    <string name="category_vexillology_description_string">vexillological</string>
     <string name="category_composite_title">Composite</string>
     <string name="category_composite_string">composite</string>
     <string name="category_maritime_title">Maritime</string>
@@ -227,20 +221,14 @@
     <string name="category_monarchy_title">Monarchy</string>
     <string name="category_monarchy_string">monarchy</string>
     <string name="category_one_party_title">One-Party</string>
-    <string name="category_one_party_string">one-party</string>
-    <string name="category_one_party_in_description_short">one-party system</string>
-    <string name="category_one_party_in_description">state under a one-party system</string>
-    <string name="category_one_party_in_description_non_state">under a one-party system</string>
+    <string name="category_one_party_string">state under a one-party system</string>
+    <string name="category_one_party_string_short">one-party system</string>
     <string name="category_theocracy_title">Theocracy</string>
     <string name="category_theocracy_string">theocracy</string>
     <string name="category_military_junta_title">Military Junta</string>
-    <string name="category_military_junta_string">military junta</string>
-    <string name="category_military_junta_in_description">state under a military junta</string>
-    <string name="category_military_junta_in_description_non_state">under a military junta</string>
+    <string name="category_military_junta_string">state under a military junta</string>
     <string name="category_provisional_government_title">Provisional Government</string>
-    <string name="category_provisional_government_string">provisional government</string>
-    <string name="category_provisional_government_in_description">state under a provisional government</string>
-    <string name="category_provisional_government_in_description_non_state">under a provisional government</string>
+    <string name="category_provisional_government_string">state under a provisional government</string>
     <string name="category_democracy_title">Democracy</string>
     <string name="category_democracy_string">democracy</string>
     <string name="category_authoritarian_title">Authoritarian</string>
@@ -259,15 +247,13 @@
     <string name="category_socialist_string">socialist</string>
     <string name="category_fascist_title">Fascist</string>
     <string name="category_fascist_string">fascist</string>
-    <string name="category_ethnic_title">Ethnic</string>
-    <string name="category_ethnic_string">ethnic</string>
     <string name="category_tribe_title">Tribal</string>
     <string name="category_tribe_string">tribe</string>
-    <string name="category_ethnic_in_description_1">ethnicity</string>
-    <string name="category_ethnic_in_description_2">n ethnicity</string>
+    <string name="category_ethnic_title">Ethnic</string>
+    <string name="category_ethnic_string">ethnicity</string>
+    <string name="category_ethnic_string_an">n ethnicity</string>
     <string name="category_social_title">Social</string>
-    <string name="category_social_string">social</string>
-    <string name="category_social_in_description">social movement</string>
+    <string name="category_social_string">social movement</string>
     <string name="category_political_movement_title">Political Movement</string>
     <string name="category_political_movement_string">political movement</string>
     <string name="category_historical_title">Historical</string>
