Add more data to isCategoryExit()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,7 +187,7 @@
     <string name="category_sovereign_entity_string">sovereign entity</string>
     <string name="category_microstate_title">Microstate</string>
     <string name="category_microstate_string">microstate</string>
-    <string name="category_quasi_state_title">Quasi-state</string>
+    <string name="category_quasi_state_title">Quasi-State</string>
     <string name="category_quasi_state_string">quasi-state</string>
     <string name="category_militant_organization_title">Militant Organization</string>
     <string name="category_militant_organization_string">militant organization</string>
